2011-03-29 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFNumberFormatter.c: (CFNumberFormatterCopyProperty) Implemented.

2011-03-29 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFRuntime.m:
	* Source/CFNumber.m:
	* Headers/CoreFoundation/CFNumber.h: Added CFBoolean.

2011-03-27 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFLocale.c: (CFLocaleGetValue) Some more code.
	(CFLocaleCopyISOCurrencyCodes)
	(CFLocaleCopyCommonISOCurrencyCodes) Implemented.
	* Source/Identifiers.m: Added CFNumberFormatter identifiers.
	* Source/CFNumberFormatter.c: Return NULL from all function for now.
	* Tests/CFLocale/values.m: Worked on test a little more.

2011-03-26 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFNumberFormatter.c: (CFNumberFormatterSetFormat) Implemented.

2011-03-26 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/GNUmakefile:
	* Source/CFRuntime.m:
	* Source/CFNumberFormatter.c:
	* Headers/CoreFoundation/CFNumberFormatter.h: New type.
	* Tests/CFNumberFormatter/create.m: First couple of tests.

2011-03-26 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFLocale.c: (CFLocaleCopyDisplayNameForPropertyValue) Implemented.

2011-03-26 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFArray.m:
	* Source/NSCFType.m:
	* Source/CFNumber.m:
	* Source/CFError.m:
	* Source/CFStream.m:
	* Source/CFURL.m:
	* Source/CFDictionary.m:
	* Source/CFString.m:
	* Source/CFData.m: All NS objects should return _kCFRuntimeNotATypeID,
	except for NSCFType.
	* Source/CFRuntime.m: Check for NULL before trying to do anything.
	* Tests/CFLocale/create.m: Compile again.
	* Tests/CFTesting.h: Fixed mistake when PASS_CFNEQ was made into macro.

2011-03-26 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/GNUmakefile:
	* Source/CFByteOrder.m:
	* Source/CFByteOrder.c: Rename.

2011-03-26 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFLocale.c: (CFLocaleCreateComponentsFromLocaleIdentifier)
	(CFLocaleCreateLocaleIdentifierFromComponents) Implemented.